--- a/1_gametheory.qmd
+++ b/1_gametheory.qmd
@@ -251,8 +251,8 @@ $$
 \begin{equation}
 \begin{split}
 \mathbb{E}(\text{Equilibrium vs. 622}) &= 0.6(\text{Result vs. Rock}) \\ 
-+ 0.2(\text{Result vs. Paper}) \\  
-+ 0.2(\text{Result vs. Scissors}) \\
+&\quad{}+ 0.2(\text{Result vs. Paper}) \\  
+&\quad{}+ 0.2(\text{Result vs. Scissors}) \\
 &= 0.6(0) + 0.2(0) + 0.2(0) \\
 &= 0
 \end{split}
@@ -269,8 +269,8 @@ What's the best that we could do against Rock only? We could play **purely paper
 $$
 \begin{equation}
 \begin{split}
-\mathbb{E}(\text{Paper vs. Rock Only}) &= 1(r) + 0(p) + -1(s) && \Rightarrow \text{Paper vs. all opponent probs} \\
-&= 1(1) + 0(0) + -1(0) && \Rightarrow \text{Opponent only plays } r \\
+\mathbb{E}(\text{Paper vs. Rock Only}) &= 1(r) + 0(p) + -1(s) \\
+&= 1(1) + 0(0) + -1(0) \\
 &= 1
 \end{split}
 \end{equation}
@@ -283,9 +283,9 @@ How about against the opponent playing 60% Rock, 20% Paper, 20% Scissors? Here w
 $$
 \begin{equation}
 \begin{split}
-\mathbb{E}(\text{Paper vs. 622}) &= 1(r) + 0(p) + -1(s) && \Rightarrow \text{Paper vs. all opponent probs} \\
-&= 1(0.6) + 0(0.2) + -1(0.2) && \Rightarrow \text{Opponent plays } 622 \\
-&= 0.6 + 0 - 0.2 
+\mathbb{E}(\text{Paper vs. 622}) &= 1(r) + 0(p) + -1(s) \\
+&= 1(0.6) + 0(0.2) + -1(0.2) \\
+&= 0.6 + 0 - 0.2 \\
 &= 0.4
 \end{split}
 \end{equation}
@@ -296,14 +296,12 @@ Consider the **Soccer Penalty Kick** game where a Kicker is trying to score a go
 
 | Kicker/Goalie | Lean Left | Lean Right | 
 |------------|-----------|--------|
-| Kick Left  | 0, 0  | +2, -2 |
-| Kick Right | +1, -1 | 0, 0|
+| **Kick Left**  | (0, 0) | (2, -2) |
+| **Kick Right** | (1, -1) | (0, 0) |
 
-The game setup is zero-sum. If Kicker and Goalie both go in one direction, then it’s assumed that the goal will miss and both get $0$ payoffs. If the Kicker plays Kick Right when the Goalie plays Lean Left, then the Kicker is favored and gets a payoff of $+1$. If the Kicker plays Kick Left when the Goalie plays Lean Right, then the kicker is even more favored, because it’s easier to kick left than right, and gets $+2$.
+The game setup is zero-sum. If Kicker and Goalie both go in one direction, then it’s assumed that the goal will miss and both get 0 payoffs. If the Kicker plays Kick Right when the Goalie plays Lean Left, then the Kicker is favored and gets a payoff of +1. If the Kicker plays Kick Left when the Goalie plays Lean Right, then the kicker is even more favored, because it’s easier to kick left than right, and gets +2.
 
-:::{.callout-note  appearance="minimal"}
-## Nash Equilibrium Exercise
-
+### Nash equilibrium? 
 Which of these, if any, is a Nash equilibrium? You can check by seeing if either player would benefit by changing their action. 
 
 | Kicker | Goalie | Equilibrium or Change? | 
@@ -312,8 +310,6 @@ Which of these, if any, is a Nash equilibrium? You can check by seeing if either
 | Left | Right | |
 | Right | Left | |
 | Right | Right | |
-
-:::
 
 :::{.callout-warning collapse="true" appearance="minimal"}
 ## Solution
@@ -328,56 +324,58 @@ There are no pure Nash equilibrium solutions because when the actions match, the
 | Right | Right | Kicker changes to left |
 :::
 
-
-:::{.callout-note  appearance="minimal"}
-## Expected Value Exercise
-Assume that they both play Left 50% and Right 50% -- what is the expected value of the game? 
-
-:::
+Assume that they both play randomly -- Left 50% and Right 50% -- what is the expected value of the game? 
 
 :::{.callout-warning collapse="true" appearance="minimal"}
 ## Solution
 
 | Kicker/Goalie | Lean Left (0.5) | Lean Right (0.5) | 
 |------------|-----------|--------|
-| Kick Left (0.5) | 0, 0  | +2, -2 |
-| Kick Right (0.5) | +1, -1 | 0, 0|
+| **Kick Left (0.5)** | (0, 0) | (2, -2) |
+| **Kick Right (0.5)** | (1, -1) | (0, 0) |
 
-We apply these probabilities to each of the 4 outcomes: 
+We apply these probabilities to each of the 4 outcomes and write in terms of the Kicker payoffs: 
 
 | Kicker/Goalie | Lean Left (0.5) | Lean Right (0.5) | 
 |------------|-----------|--------|
-| Kick Left (0.5) | 0, 0 (0.25) | +2, -2 (0.25) |
-| Kick Right (0.5) | +1, -1 (0.25) | 0, 0 (0.25) |
+| **Kick Left (0.5)** | Val: 0 <br>Pr: 0.25 | Val: 2 <br>Pr: 0.25 |
+| **Kick Right (0.5)** | Val: 1 <br>Pr: 0.25 | Val: 0 <br>Pr: 0.25 |
 
-Now for the Kicker, we have $\mathbb{E} = 0.25*0 + 0.25*2 + 0.25*1 + 0.25*0 = 0.75$. 
+Now for the Kicker, we have $\mathbb{E_k} = 0.25(0) + 0.25(2) + 0.25(1) + 0.25(0) = 0.75$. 
 
-Since it's zero-sum, we have $\mathbb{E} = -0.75$ for the Goalie.
+Since it's zero-sum, we have $\mathbb{E_g} = -0.75$ for the Goalie.
 
+:::
+
+### Probabilistic Interpretations
 Note that, for example, the Kicker playing 50% Left and 50% Right could be interpreted as a single player having these probabilities or a field of players averaging to these probabilities. So out of 100 players, this could mean: 
 
 - 100 players playing 50% Left and 50% Right
 - 50 players playing 100% Left and 50 players playing 100% Right
 - 50 players playing 75% Left/25% Right and 50 players playing 25% Left/75% right
 
-:::
-
 When the Goalie plays left with probability $p$ and right with probability $1-p$, we can find the expected value of the Kicker actions.
 
 | Kicker/Goalie | Lean Left (p) | Lean Right (1-p) | 
 |------------|-----------|--------|
-| Kick Left | 0, 0  | +2, -2 |
-| Kick Right | +1, -1 | 0, 0|
+| **Kick Left** | (0, 0)  | (2, -2) |
+| **Kick Right** | (1, -1) | (0, 0) |
 
-$\mathbb{E}(\text{Kick Left}) = 0*p + 2*(1-p) = 2 - 2*p$
+$\mathbb{E_g}(\text{Kick Left}) = p(0) + (1-p)(2) = 2 - 2p$
 
-$\mathbb{E}(\text{Kick Right}) = 1*p + 0*(1-p) = 1*p$
+$\mathbb{E_g}(\text{Kick Right}) = p(1) + (1-p)(0) = p$
 
 The Kicker is going to play the best response to the Goalie’s strategy. The Goalie wants to make the Kicker **indifferent** to Kick Left and Kick Right because if the Kicker was not going to be indifferent, then he would prefer one of the actions, meaning that action would be superior to the other. Therefore the Kicker will play a mixed strategy in response that will result in a Nash equilibrium where neither player benefits from unilaterally changing strategies. (Note that indifferent does not mean 50% each, but means the expected value is the same for each.)
 
 ![](assets/kickergoalieplot.png)
 
-By setting the values equal, we get $2 - 2*p = 1*p \Rightarrow p = \frac{2}{3}$ as shown in the plot. This means that $1-p = 1 - \frac{2}{3} = \frac{1}{3}$. Therefore the Goalie should play Lean Left $\frac{2}{3}$ and Lean Right $\frac{1}{3}$. The value for the Kicker is $\frac{2}{3}$, or $(0.67)$, for both actions, regardless of the Kicker's mixing strategy. 
+By setting the values equal, we get $2 - 2p = p \Rightarrow p = \frac{2}{3}$ as shown in the plot. 
+
+This means that $1-p = 1 - \frac{2}{3} = \frac{1}{3}$. 
+
+Therefore the Goalie should play Lean Left $\frac{2}{3}$ and Lean Right $\frac{1}{3}$. 
+
+The value for the Kicker is $\frac{2}{3}$, or $(0.67)$, for both actions, regardless of the Kicker's mixing strategy. 
 
 Note that the Kicker is worse off now ($0.67$ now compared to $0.75$) than when both players played 50% each action. Why?
 
