--- a/1_gametheory.qmd
+++ b/1_gametheory.qmd
@@ -22,23 +22,23 @@ We can also think about games along the axis of **fixed or random opponents** an
 | **Imperfect Info**    | Wordle, Blackjack  | Poker, Rock Paper Scissors, Figgie, StarCraft |
 
 ### Perfect information games
-Perfect information games like Chess and Go are complex and have been the focus of recent AI research, much like poker. Solving these games can theoretically be done using **backward induction**, which means starting from possible end positions and working backwards. 
+Perfect information games like Chess and Go are complex and have been the focus of recent AI research (along with poker). Solving these games can theoretically be done using **backward induction**, which means starting from possible end positions and working backwards. 
 
 ### Imperfect information games
 Here we want to primarily focus on the bottom right of this chart: imperfect information games with an adversarial opponent. 
 
-These games cannot be solved in the same way as perfect information games because we don't know what state of the game we are in (we'll look at this more in [Game Trees](3_gametrees.qmd)). 
+These games cannot be solved in the same way as perfect information games because we don't know always what true state of the game we are in because of the hidden information (we'll look at this more in [Game Trees](3_gametrees.qmd)). 
 
 Imperfect information games are representative of real world situations where information is usually incomplete, e.g. job interviews, investments, dating, and negotiations.
 
 ### Winning games
-The goal of a game is to maximize the "utility", which is usually a score or money or some kind of value. 
+The goal of a game is to maximize the *utility*, which is usually a score or money or some kind of value. 
 
 There are two fundamental strategies: 
 
 1. **Exploiting opponent weaknesses:** Capitalize on specific flaws or tendencies of opponents, while putting yourself at risk if the opponent adapts well.
 
-2. **Being unexploitable:** Playing a balanced, theoretically sound strategy, also known as "game theory optimal". This does not maximize against weaker opponents, but rather aims to minimize losses against any possible opponents. 
+2. **Being unexploitable:** Playing a balanced, theoretically sound strategy, also known as *game theory optimal*. This does not maximize against weaker opponents, but rather aims to minimize losses against any possible opponent. 
 
 ## Rock Paper Scissors
 ![Image by [Enzoklop](https://en.wikipedia.org/wiki/Rock_paper_scissors#/media/File:Rock-paper-scissors.svg) under [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/)](assets/rps.png){width=50%}
@@ -52,7 +52,7 @@ This simple game was the subject of a DeepMind paper in 2023, where they wrote:
 
 Let's dig in to why RPS is a more interesting game than it might seem. 
 
-### Payoff Matrix
+### Payoff matrix
 The core features of a game are its players, the actions of each player, and the payoffs. We can show this for RPS in the below payoff matrix, also known as normal-form.
 
 | Player 1/2 | Rock    | Paper   | Scissors |
@@ -63,10 +63,10 @@ The core features of a game are its players, the actions of each player, and the
 
 The payoffs for Player 1 are on the left and for Player 2 on the right in each payoff outcome of the game. For example, the bottom left payoff is when Player 1 plays Scissors and Player 2 plays Rock, resulting in -1 for P1 and +1 for P2. 
 
-### Expected Value
+### Expected value
 A strategy says which actions you would take for every state of the game.
 
-**Expected value** represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
+**Expected value** in a game represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
 
 Suppose that  Player 1 plays the strategy: 
 
@@ -96,7 +96,7 @@ Let's add these to the matrix:
 | **Paper ($p_1=0.25$)** | (1, -1) | (0, 0)  | (-1, 1)  |
 | **Scissors ($s_1=0.25$)** | (-1, 1) | (1, -1) | (0, 0)   |
 
-To simplify, let's just write the payoffs for Player 1 since payoffs for Player 2 will simply be the inverse: 
+To simplify, let's just write the payoffs for Player 1 since payoffs for Player 2 will simply be the opposite: 
 
 | Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
 |--------|---------|---------|----------|
@@ -142,19 +142,19 @@ The equilibrium RPS strategy is worked out below:
 
 If Player 1 plays Rock with probability $r$, Paper with probability $p$, and Scissors with probability $s$, we have the following expected value equations for Player 2: 
 
-$\mathbb{E_2}(\text{R}) = -1p + 1s$
+$\mathbb{E}[P_2(R)] = -1p + 1s$
 
-$\mathbb{E_2}(\text{P}) = 1r - 1s$
+$\mathbb{E}[P_2(P)] = 1r - 1s$
 
-$\mathbb{E_2}(\text{S}) = -1r + 1p$
+$\mathbb{E}[P_2(S)] = -1r + 1p$
 
-(To see each of these, sum the payoffs for each column with P2 payoffs and P1 probabilities.)
+(To compute each of these, sum the payoffs for each column with P2 payoffs and P1 probabilities. P2 payoffs because these are the expected values for P2 and P1 probabiltiies because the payoffs depend on the strategy probabilties of P1 against each of P2's actions.)
 
 Since no action dominates, we know that the EV of every strategic action should be equal  (since if a certain strategy was best, we'd want to always play that strategy). 
 
 To solve for $r$, $p$, and $s$, we can start by setting these EVs equal: 
 
-$\mathbb{E_2}(\text{R}) = \mathbb{E_2}(\text{P})$
+$\mathbb{E}[P_2(R)] = \mathbb[P_2(P)]$
 
 $-1p + 1s = 1r - 1s$
 
@@ -162,7 +162,7 @@ $2s = p + r$
 
 Then setting these equal: 
 
-$\mathbb{E_2}(\text{R}) = \mathbb{E_2}(\text{S})$
+$\mathbb{E}[P_2(R)] = \mathbb{E}[P_2(S)]$
 
 $-1p + 1s = -1r + 1p$
 
@@ -170,7 +170,7 @@ $s + r = 2p$
 
 And finally setting these equal: 
 
-$\mathbb{E_2}(\text{P}) = \mathbb{E_2}(\text{S})$
+$\mathbb{E}[P_2(P)] = \mathbb{E}[P_2(S)]$
 
 $1r - 1s = -1r + 1p$
 
@@ -250,16 +250,16 @@ How about the case of the opponent playing 60% Rock, 20% Paper, 20% Scissors?
 $$
 \begin{equation}
 \begin{split}
-\mathbb{E}(\text{Equilibrium vs. 622}) &= 0.6(\text{Result vs. Rock}) \\ 
-&\quad{}+ 0.2(\text{Result vs. Paper}) \\  
-&\quad{}+ 0.2(\text{Result vs. Scissors}) \\
+\mathbb{E}(\text{Equilibrium vs. 622}) &= 0.6(\text{Equilibrium vs. Rock}) \\ 
+&\quad{}+ 0.2(\text{Equilibrium vs. Paper}) \\  
+&\quad{}+ 0.2(\text{Equilibrium vs. Scissors}) \\
 &= 0.6(0) + 0.2(0) + 0.2(0) \\
 &= 0
 \end{split}
 \end{equation}
 $$
 
-The random strategy will result in 0 against any pure strategy and any combination of strategies including the random strategy. 
+The random equilibrium strategy will result in 0 against any pure strategy and any combination of strategies including *622* and the opponent playing the random strategy. 
 
 ### Exploiting vs. Nash
 The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even! 
@@ -269,7 +269,7 @@ What's the best that we could do against Rock only? We could play **purely paper
 $$
 \begin{equation}
 \begin{split}
-\mathbb{E}(\text{Paper vs. Rock Only}) &= 1(r) + 0(p) + -1(s) \\
+\mathbb{E}(\text{Paper vs. Rock}) &= 1(r) + 0(p) + -1(s) \\
 &= 1(1) + 0(0) + -1(0) \\
 &= 1
 \end{split}
@@ -290,6 +290,8 @@ $$
 \end{split}
 \end{equation}
 $$
+
+Playing Paper vs. 622 results in an expected win of 0.4 per game. 
 
 ## Soccer Kicker vs. Goalie
 Consider the **Soccer Penalty Kick** game where a Kicker is trying to score a goal and the Goalie is trying to block it. 
@@ -341,19 +343,20 @@ We apply these probabilities to each of the 4 outcomes and write in terms of the
 | **Kick Left (0.5)** | Val: 0 <br>Pr: 0.25 | Val: 2 <br>Pr: 0.25 |
 | **Kick Right (0.5)** | Val: 1 <br>Pr: 0.25 | Val: 0 <br>Pr: 0.25 |
 
-Now for the Kicker, we have $\mathbb{E_k} = 0.25(0) + 0.25(2) + 0.25(1) + 0.25(0) = 0.75$. 
+Now for the Kicker, we have $\mathbb{E}[K] = 0.25(0) + 0.25(2) + 0.25(1) + 0.25(0) = 0.75$. 
 
-Since it's zero-sum, we have $\mathbb{E_g} = -0.75$ for the Goalie.
+Since it's zero-sum, we have $\mathbb{E}[G] = -0.75$ for the Goalie.
 
 :::
 
-### Probabilistic Interpretations
+### Probabilistic interpretations
 Note that, for example, the Kicker playing 50% Left and 50% Right could be interpreted as a single player having these probabilities or a field of players averaging to these probabilities. So out of 100 players, this could mean: 
 
 - 100 players playing 50% Left and 50% Right
 - 50 players playing 100% Left and 50 players playing 100% Right
 - 50 players playing 75% Left/25% Right and 50 players playing 25% Left/75% right
 
+### Finding equilibrium
 When the Goalie plays left with probability $p$ and right with probability $1-p$, we can find the expected value of the Kicker actions.
 
 | Kicker/Goalie | Lean Left (p) | Lean Right (1-p) | 
@@ -361,9 +364,9 @@ When the Goalie plays left with probability $p$ and right with probability $1-p$
 | **Kick Left** | (0, 0)  | (2, -2) |
 | **Kick Right** | (1, -1) | (0, 0) |
 
-$\mathbb{E_g}(\text{Kick Left}) = p(0) + (1-p)(2) = 2 - 2p$
+$\mathbb{E}[K(L)] = p(0) + (1-p)(2) = 2 - 2p$
 
-$\mathbb{E_g}(\text{Kick Right}) = p(1) + (1-p)(0) = p$
+$\mathbb{E}[K(R)] = p(1) + (1-p)(0) = p$
 
 The Kicker is going to play the best response to the Goalie’s strategy. The Goalie wants to make the Kicker **indifferent** to Kick Left and Kick Right because if the Kicker was not going to be indifferent, then he would prefer one of the actions, meaning that action would be superior to the other. Therefore the Kicker will play a mixed strategy in response that will result in a Nash equilibrium where neither player benefits from unilaterally changing strategies. (Note that indifferent does not mean 50% each, but means the expected value is the same for each.)
 
@@ -381,17 +384,17 @@ Note that the Kicker is worse off now ($0.67$ now compared to $0.75$) than when 
 
 If the Kicker plays Left with probability $q$ and Right with probability $1-q$, then the Goalie’s values are: 
 
-$\mathbb{E}(\text{Lean Left}) = 0*q - 1*(1-q) = -1 + q$
+$\mathbb{E}(\text{Lean Left}) = 0q - 1(1-q) = -1 + q$
 
-$\mathbb{E}(\text{Lean Right}) = -2*q + 0 = -2*q$
+$\mathbb{E}(\text{Lean Right}) = -2q + 0 = -2q$
 
 Setting equal, 
 
 $$
 \begin{equation}
 \begin{split}
--1 + q &= -2*q \\
--1 &= -3*q  \\
+-1 + q &= -2q \\
+-1 &= -3q  \\
 \frac{1}{3} &= q
 \end{split}
 \end{equation}
@@ -403,50 +406,178 @@ We can see this from the game table:
 
 | Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
 |------------|-----------|--------|
-| Kick Left ($\frac{1}{3}$) | 0, 0 ($\frac{2}{9}$) | +2, -2 ($\frac{1}{9}$) |
-| Kick Right ($\frac{2}{3}$) | +1, -1 ($\frac{4}{9}$) | 0, 0 ($\frac{2}{9}$)|
+| **Kick Left ($\frac{1}{3}$)** | Val: (0, 0) <br>Pr: ($\frac{2}{9}$) | Val: (2, -2) <br>Pr: ($\frac{1}{9}$) |
+| **Kick Right ($\frac{2}{3}$)** | Val: (1, -1) <br>Pr: ($\frac{4}{9}$) | Val: (0, 0) <br>Pr: ($\frac{2}{9}$) |
 
-Therefore the expected payoffs in this game are $\frac{2}{9}*0 + \frac{1}{9}*2 + \frac{4}{9}*1 + \frac{2}{9}*0 = \frac{6}{9} = 0.67$ for the Kicker and $-0.67$ for the Goalie. 
+Therefore the expected payoffs in this game are:
 
+$\mathbb{E}[K] = \frac{2}{9}(0) + \frac{1}{9}(2) + \frac{4}{9}(1) + \frac{2}{9}(0) = \frac{6}{9} = 0.67$ for the Kicker and $-0.67$ for the Goalie. 
+
+### Switching out of equilibrium
 In an equilibrium, no player should be able to unilaterally improve by changing their strategy. What if the Kicker switches to always Kick Left?
 
 | Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
 |------------|-----------|--------|
-| Kick Left ($1$) | 0, 0 ($\frac{2}{3}$) | +2, -2 ($\frac{1}{3}$) |
-| Kick Right ($0$) | +1, -1 ($0$) | 0, 0 ($0$)|
+| **Kick Left ($1$)** | Val: (0, 0) <br>Pr: ($\frac{2}{3}$) | Val: (2, -2) <br>Pr: ($\frac{1}{3}$) |
+| **Kick Right ($0$)** | Val: (1, -1) <br>Pr: ($0$) | Val: (0, 0) <br>Pr: ($0$) |
 
-Now the Kicker's payoff is still $\frac{1}{3}*2 = 0.67$. 
+Now the Kicker's payoff is still $\frac{1}{3}(2) = 0.67$. 
 
 When a player makes their opponent indifferent, this means that any action the opponent takes (within the set of equilibrium actions) will result in the same payoff! 
 
 So if you know your opponent is playing the equilibrium strategy, then you can actually do whatever you want with no penalty with the mixing actions. Sort of. 
 
-The risk is that the opponent can now deviate from equilibrium and take advantage of your new strategy. For example, if the Goalie caught on and moved to always Lean Left, then expected value is reduced to $0$ for both players. 
+The risk is that the opponent can now deviate from equilibrium and take advantage of your new strategy. For example, if the Goalie caught on and moved to always Lean Left, then the value is reduced to $0$ for both players. Though if the Kicker then caught on and moved to always Kick Right, then the value goes up to $1$ for the Kicker and $-1$ for the Goalie. Perhaps after a few cycles like this, the players would go back to equilibrium.
 
-To summarize, you can only be penalized for not playing the equilibrium mixing strategy if your opponent plays a non-equilibrium strategy that exploits your strategy. 
+To summarize, you can only be penalized for not playing the equilibrium mixing strategy if your opponent plays a non-equilibrium strategy that exploits your strategy. You can only profit more than the equilibrium strategy if your opponent either plays off equilibrium and you do as well or if you play equilibrium and they play some action that is not part of the equilibrium strategy (also known as the support, or the set of pure strategies that are played with non-zero probability under the mixed strategy, which is not possible in this game since both possible actions are played at equilibrium). 
 
-:::{.callout-note  appearance="minimal"}
-## Indifference
-Why do players make their opponent indifferent?
+### What's up with indifference?
+Why do players make their opponent indifferent? When you make your opponent indifferent, then you don’t give them any best play. 
+
+
+
+
+
+### Deviating from Nash
+
+Best response to each other in equilibrium, no incentive to deviate. 
+Deviate means no longer in equilibrium, though EV is same. 
+only guarantee worst-case payoff of 0 if you randomize
+
+### Indifference 
+why is fundamental goal to make other player indifferent?
+if deviate, 
+indifference guarantees can't improve by changing unliterally 
+
+## Clairvoyance Poker 
+Back to poker. We previously built **Face-up 3-card Poker** where each player was dealt a card from the deck of {0, 1, 2} and the high card won. 
+
+Now we're going to make the game more interesting with the same deck. This game was first shown in The Mathematics of Poker (Bill Chen, Jared Ankenman) and then also in the excellent Play Optimal Poker 1 (Andrew Brokos). 
+
+- Player 1 will *always* be dealt card 1. 
+
+- Player 2 will be dealt randomly from {0, 2}.
+
+- P1 knows P2 has either card 0 or 2, but not which. P2 knows that P1 has card 1. 
+
+- This is representative of a real poker scenario where P1 has a mid-strength hand that can beat bluffs, but loses to value bets by strong hands. P2 has either a bluff (weak hand) or a strong hand. 
+
+Let's modify the code to update the deal: 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Update `deal_cards` function
+```python
+    def deal_cards(self):
+        self.cards[0] = 1
+        remaining_cards = [card for card in self.deck if card != self.cards[0]]
+        self.cards[1] = random.choice(remaining_cards)
+```
 :::
 
-## Indifference in Poker 
-Back to poker. We can apply this indifference principle in computing equilibrium strategies in poker. When you make your opponent indifferent, then you don’t give them any best play. 
+### Equity and Variance
+**Equity** is defined as the percentage of the pot expected to win given the cards, assuming no additional betting. We see that in the original case where players were randomly dealt cards *and* in this case, both players have 50% equity before the cards are dealt. After the cards are dealt, the higher card has 100% equity. 
 
-Important note: If you play an equilibrium strategy, opponents will only get penalized for playing hands outside of the set of hands in the mixed strategy equilibrium (also known as the support, or the set of pure strategies that are played with non-zero probability under the mixed strategy). If opponents are not playing equilibrium, though, then they open themselves up to exploitation. 
+In real poker games like Texas Hold'em, equity is more interesting because there are additional community cards that mean that even if one hand starts off as stronger, it won't necessarily win. Below we have a special poker hand where the equities are shown as 53% and 47% and the hand currently losing actually has higher equity! 
 
-Let’s look at one particular situation in Kuhn Poker and work it out by hand. Suppose that you are Player 2 with card Q after a Check from Player 1.
+![](assets/equity.png)
 
-![](assets/kuhnindiff.png)
+**Variance** measures the spread of the score differences. Higher variance means more volatility in the outcomes. 
 
-:::{.callout-note  appearance="minimal"}
-## Expected Value Exercise
-What indifference is Player 2 trying to induce? Compute it.
+We can run a sample of games and get an empirical sample for: 
 
-:::
+- Equity: 
+- Variance
+- Winrate: 
 
-:::{.callout-warning collapse="true" appearance="minimal"}
-## Solution
+Standard Error: This measures the precision of our sample mean as an estimate of the population mean.
+Confidence Interval: This gives us a range where we expect the true population mean to lie with 95% confidence.
+
+### Betting Rules and Sequences 
+- Both players ante 1 chip, so the starting pot is 2
+
+- Each player has 1 remaining chip to use for betting 
+
+- Player 1 acts first and can either Bet 1 or Check (Pass)
+
+Play continues until one of these betting sequences happens, which ends the hand: 
+
+- **Check Check:** Hands go to *showdown* and player with highest card wins 1 (the ante)
+
+- **Bet Call:** Hands go to *showdown* and player with highest card wins 2 (the ante + bet)
+
+- **Bet Fold:** Player who bets wins 1 (the ante)
+
+Here is a list of all possible betting sequences:  
+
+| P1  | P2  | P1 | Winner       |
+|------------|-----------|-----------|----------|
+| Bet        | Fold     |          | P1 (+1) |
+| Bet        | Call        |          | Higher Card (+2)|
+| Check     | Check     |          | Higher Card (+1)|
+| Check     | Bet       | Fold    | P2 (+1) |
+| Check     | Bet        | Call       | Higher Card (+2)|
+
+### Starting Strategies
+There are six possible states of the game, two for P1 and four for P2. Let's hard-code some initial strategies for both players:  
+
+- P1[1, Starting]: Randomly Bet/Check
+- P2[0, After Bet]: Fold
+- P2[2, After Bet]: Call
+- P2[0, After Check]: Randomly Bet/Check
+- P2[2, After Check]: Bet
+- P1[1, After Check and Bet]: Randomly Bet/Check
+
+This strategy randomizes uncertain decisions and takes clearly smart decisions when possible. What does that mean? 
+
+- P2[0, After Bet]: Fold
+    - This is the worst card and can't win
+- P2[2, After Bet]: Call
+    - This is the best hand and guarantees a win
+- P2[2, After Check]: Bet
+    - This is the best card and betting can only possibly win additional chips
+
+Let's put the strategies into our code and see how each strategy is doing. There are 9 total state-action pairs bolded below:  
+
+- P1[1, Starting]: Randomly Bet/Check
+    - **P2[0, Starting]: Bet**
+    - **P2[0, Starting]: Check**
+- **P2[0, After Bet]: Fold**
+- **P2[2, After Bet]: Call**
+- P2[0, After Check]: Randomly Bet/Check
+    - **P2[0, After Check]: Bet**
+    - **P2[0, After Check]: Check**
+- **P2[2, After Check]: Bet**
+- P1[1, After Check and Bet]: Randomly Bet/Check
+    - **P2[0, After Check and Bet]: Bet**
+    - **P2[0, After Check and Bet]: Check**
+
+---> show wins/losses, frequency, total for each strategic decision
+P1 bet, P1 check/call, P1 check/fold
+P2 0 after bet call, P2 0 after bet fold, P2 0 after check bet, P2 0 after check check
+P2 2 after bet call, P2 2 after bet fold, P2 2 after check bet, P2 2 after check check
+
+### Dominated Strategy 
+Note that P1 betting is strictly worse and why 
+
+### Your Strategies
+---> Try strat for P1 then for P2
+See results
+
+### Indifference in Poker 
+Figuring out strategy for 0 facing check, actually thinking about strategy for 0 and 2. goal indifference
+
+EV folding 0, EV calling should also be 0 
+
+shows EV = bluff*3 - value*1 (but this is for overall range 1/4 bluffs)
+
+bluff to value ratio bet/(bet+pot)
+
+Figuring out strategy for 1 after check/bet
+
+bluffing frequency goes up as bet size gets larger relative to pot
+
+Only mix when both same EV 
+
 Making P1 indifferent between calling and folding with a K 
 
 We can work out Player 2's betting strategy by calculating the indifference. Let $b$ be the probability that P2 bets with a Q after P1 checks. 
@@ -505,107 +636,6 @@ $\Pr(\text{P2 Bluff after P1 Check}) = \frac{1}{4}$
 
 :::
 
-### Deviating from Nash
-
-Best response to each other in equilibrium, no incentive to deviate. 
-Deviate means no longer in equilibrium, though EV is same. 
-only guarantee worst-case payoff of 0 if you randomize
-
-### Indifference 
-why is fundamental goal to make other player indifferent?
-if deviate, 
-indifference guarantees can't improve by changing unliterally 
-
-
-## Clairvoyance Poker 
-Back to poker. We previously built **Face-up 3-card Poker** where each player was dealt a card from the deck of {0, 1, 2} and the high card won. 
-
-Now we're going to make the game more interesting. 
-
-- Player 1 will *always* be dealt card 1. 
-
-- Player 2 will be dealt randomly from {0, 2}.
-
-- P1 knows P2 has either card 0 or 2, but not which. P2 knows that P1 has card 1. 
-
-Let's modify the code: 
-
-:::{.callout-tip collapse="true" appearance="minimal"}
-### Update `deal_cards` function
-```python
-    def deal_cards(self):
-        self.cards[0] = 1
-        remaining_cards = [card for card in self.deck if card != self.cards[0]]
-        self.cards[1] = random.choice(remaining_cards)
-```
-:::
-
-### Equity in Poker
-show same equity 
-
-### Betting Rules and Sequences 
-- Both players ante 1 chip, so the starting pot is 2
-
-- Player 1 acts first and can either Bet 1 or Check (Pass)
-
-    - If P1 Bets, P2 can Call or Fold
-
-    - If P1 Checks, P2 can Bet or Check
-
-        - If P1 Passes and P2 Bets, P1 can Call or Fold
-
-There are three possible ways for the hand to end: 
-
-- Check Check: Pot 2, hands go to *showdown* and player with highest card wins 1 (the ante)
-- Bet Call: Pot 4, hands go to *showdown* and player with highest card wins 2 (the ante + bet)
-- Bet Fold: Pot 3, player who bets wins 1 (the ante)
-
---> Add pot size stuff 
-
-### Starting Strategies
-Let's hard-code some initial strategies for both players. 
-
-- P1: Randomly bet/check
-- P2 after bet: Call with card 2 and fold with card 0
-- P2 after check: Bet with card 2 and randomize between bet/check with card 0
-
-This strategy randomizes uncertain decisions and takes clearly smart decisions when possible. 
-
-What does that mean? 
-
-- P2 call with card 2 after P1 bet: This is the best hand and guarantees a win
-
-- P2 fold with card 0 after P1 bet: This is the worst card and can't win
-
-- P2 bet with card 2 after P1 check: This is the best card and betting can only possibly win additional chips
-
----> show wins/losses, frequency, total for each strategic decision
-P1 bet, P1 check/call, P1 check/fold
-P2 0 after bet call, P2 0 after bet fold, P2 0 after check bet, P2 0 after check check
-P2 2 after bet call, P2 2 after bet fold, P2 2 after check bet, P2 2 after check check
-
-### Dominated Strategy 
-Note that P1 betting is strictly worse and why 
-
-### Your Strategies
----> Try strat for P1 then for P2
-See results
-
-### Indifference in Poker 
-Figuring out strategy for 0 facing check, actually thinking about strategy for 0 and 2. goal indifference
-
-EV folding 0, EV calling should also be 0 
-
-shows EV = bluff*3 - value*1 (but this is for overall range 1/4 bluffs)
-
-bluff to value ratio bet/(bet+pot)
-
-Figuring out strategy for 1 after check/bet
-
-bluffing frequency goes up as bet size gets larger relative to pot
-
-Only mix when both same EV 
-
 
 call strategy wants indifferent between betting and checking card 0 
 checking 0 has EV 0
@@ -626,4 +656,18 @@ always folded with bad cards.
 Add uncertainty the opponent has to think about in counter-strategy
 If always folded bad cards, opponent knows you keep playing with good # 
 
-### Bonus: Ideal Bet Size
+### exploits
+bet all good, check all bad
+opponent can always fold
+Then switch to always betting
+Then switch to awlasy calling
+Then move to betting strong, checking weak
+
+bluffing combined with value betting is the profitable thing. players who fold too often lose to bluffs, call too often lose value to value bets. 
+betting to bluff and call ratios
+adepend on pot size
+
+### Bonus: Bet Sizing
+pot sizing affects strategy
+pot large etc. 
+--> Add pot size stuff 
